trustfall_core/src/resources/test_data/valid_queries/edge_parameters_on_non_root.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 3) {
        value @output

        multiple(max: 3) {
            multiple: value @output
        }
    }
}"#,
    arguments: {},
)
