trustfall_core/src/resources/test_data/parse_errors/multiple_roots.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 3) {
        num: value @output
    }
    Number(max: 4) {
        value @output
    }
}"#,
    arguments: {},
)
